Step 1 skeleton Deps added Build file configured